--- a/components/mi4r7qmz0-python/overlays/development/deployment-patch.yaml
+++ b/components/mi4r7qmz0-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mi4r7qmz0-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-30310b5ad6.z3r1.p3.openshiftapps.com/rhtap/rhtap-qe-python:5002023b9345635c73c19b7e005819238eb24576@sha256:42f771673837dcc75e05a3de235e6ad85f5e798056277247a589d8000ccaba10
+          name: container-image
